--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4567",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -24,6 +24,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.19.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sendgrid/mail": "^8.1.6",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-image": "^3.19.0",
@@ -46,6 +49,7 @@
     "resend": "^6.9.2",
     "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.183.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -56,6 +60,7 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.183.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
